trunk/Archive2/a7/3f6375772748d6/output
+ g++ -std=c++11 -O0 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -fno-builtin main.cpp
main.cpp:3:43: error: call to non-constexpr function 'int strcmp(const char*, const char*)'
 constexpr int test = strcmp("test", "test");
                                           ^
