trunk/Archive2/a7/3f6375772748d6/main.cpp
#include <cstring>

constexpr int test = strcmp("test", "test");

int main() {}
